--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>Document</title>
 </head>
 <body>
+  <header>
   <h1 class="header">Tic Tac Toe</h1>
+</header>
+ <div class="bouter">
   <div id="outer">
     <div class="row">
       <div class="inner" id="1"  ></div>
@@ -26,6 +29,8 @@
     </div>
   </div>
   <button id="reset">RESET</button>
+ </div>
+  
   <script src = "index.js"></script>
 </body>
 </html>
